// Generated from schemas/uk_air_quality_schema.sql

Table connectors {
  id integer [pk]
  connector_code text
  label text
  display_name text
  service_url text
  station_display_name_template text
  overwrite_station_name boolean
  poll_enabled boolean
  poll_interval_minutes int
  poll_window_hours int
  poll_timeseries_batch_size int
  stations_bbox_supported boolean
  timeseries_station_filter_supported boolean
  last_polled_at timestamptz
  created_at timestamptz
}

Table categories {
  id bigint [pk]
  category_ref text
  label text
  connector_id integer
}

Table phenomena {
  id bigint [pk]
  label text
  eionet_uri text
  notation text
  pollutant_label text
  connector_id integer
}

Table offerings {
  id bigint [pk]
  offering_ref text
  label text
  service_ref text
  connector_id integer
}

Table features {
  id bigint [pk]
  feature_ref text
  label text
  geometry geography(Point, 4326)
  service_ref text
  connector_id integer
}

Table procedures {
  id bigint [pk]
  procedure_ref text
  label text
  raw_formats text[]
  service_ref text
  connector_id integer
}

Table stations {
  id bigint [pk]
  station_ref text
  service_ref text
  label text
  station_name text
  station_type text
  station_exposure text
  region text
  la_code text
  la_version text
  pcon_code text
  pcon_version text
  geometry geography(Point, 4326)
  connector_id integer
  category_id bigint
  first_seen_at timestamptz
  last_seen_at timestamptz
  removed_at timestamptz
  created_at timestamptz
}

Table station_metadata {
  station_id bigint [pk]
  attributes jsonb
  created_at timestamptz
  updated_at timestamptz
}

Table uk_air_sos_networks {
  network_ref text [pk]
  network_code text
  network_display_name text
  created_at timestamptz
  updated_at timestamptz
}

Table uk_air_sos_network_pollutants {
  network_ref text
  match_type text
  match_value text
  created_at timestamptz

  indexes {
    (network_ref, match_type, match_value) [pk]
  }
}

Table uk_air_sos_site_register {
  id bigint [pk]
  uk_air_id text
  eu_site_id text
  emep_site_id text
  site_name text
  environment_type text
  zone text
  start_date date
  end_date date
  latitude double
  longitude double
  northing double
  easting double
  altitude_m double
  networks text[]
  aurn_pollutants_measured text
  site_description text
  source_url text
  source_file text
  snapshot_at timestamptz
  raw_payload jsonb
  created_at timestamptz
}

Table uk_air_sos_station_refs {
  station_id bigint [pk]
  uk_air_id text
  match_method text
  match_distance_m double
  source_snapshot_at timestamptz
  created_at timestamptz
  updated_at timestamptz
}

Table breathelondon_timeseries_checkpoints {
  station_id bigint
  species text
  timeseries_id integer
  last_observed_at timestamptz
  last_fetch_at timestamptz
  last_error text
  created_at timestamptz
  updated_at timestamptz

  indexes {
    (station_id, species) [pk]
  }
}

Table pcon_current {
  id bigint [pk]
  gss_code text
  name text
  electorate int
  region text
  country text
  created_at timestamptz
}

Table pcon_legacy {
  id bigint [pk]
  gss_code text
  name text
  electorate int
  region text
  country text
  created_at timestamptz
}

Table gss_codes {
  id bigint [pk]
  gss_code text
  name text
  geography_type text
  valid_from date
  valid_to date
}

Table uk_aq_region_names {
  region_code text [pk]
  region_name text
  created_at timestamptz
}

Table uk_aq_guidelines {
  id bigint [pk]
  pollutant text
  averaging_period_label text
  averaging_period_interval interval
  level_label text
  limit_value numeric
  uom text
  source text
  notes text
  valid_from date
  valid_to date
  created_at timestamptz
}

Table timeseries {
  id integer [pk]
  timeseries_ref text
  label text
  uom text
  station_id bigint
  service_ref text
  connector_id integer
  offering_id bigint
  feature_id bigint
  procedure_id bigint
  phenomenon_id bigint
  category_id bigint
  first_value_at timestamptz
  last_value_at timestamptz
  last_value numeric
  extras jsonb
  rendering_hints jsonb
  status_intervals jsonb
  created_at timestamptz
}

Table reference_values {
  id uuid [pk]
  timeseries_id integer
  name text
  color text
  value numeric
  created_at timestamptz
}

Table observations {
  timeseries_id integer
  observed_at timestamptz
  value numeric
  status text
  created_at timestamptz

  indexes {
    (timeseries_id, observed_at) [pk]
  }
}

Table error_logs {
  id uuid [pk]
  created_at timestamptz
  source text
  severity text
  message text
  stack text
  context jsonb
  connector_id integer
  station_id bigint
  timeseries_id integer
  dropbox_path text
}

Table pm25_population_exposure {
  id bigint [pk]
  year int
  pei_base numeric
  pei numeric
  yearly_change numeric
  cumulative_change numeric
  cumulative_change_pct numeric
  collected_at timestamptz
}

Table pm25_amct_sites {
  id bigint [pk]
  site_code text
  site_name text
  year int
  annual_mean numeric
  exceeded_interim boolean
  exceeded_final boolean
  data_capture_ok boolean
  collected_at timestamptz
}

Ref: categories.connector_id > connectors.id
Ref: phenomena.connector_id > connectors.id
Ref: offerings.connector_id > connectors.id
Ref: features.connector_id > connectors.id
Ref: procedures.connector_id > connectors.id
Ref: stations.connector_id > connectors.id
Ref: stations.category_id > categories.id
Ref: station_metadata.station_id > stations.id
Ref: uk_air_sos_network_pollutants.network_ref > uk_air_sos_networks.network_ref
Ref: uk_air_sos_station_refs.station_id > stations.id
Ref: breathelondon_timeseries_checkpoints.station_id > stations.id
Ref: breathelondon_timeseries_checkpoints.timeseries_id > timeseries.id
Ref: timeseries.station_id > stations.id
Ref: timeseries.connector_id > connectors.id
Ref: timeseries.offering_id > offerings.id
Ref: timeseries.feature_id > features.id
Ref: timeseries.procedure_id > procedures.id
Ref: timeseries.phenomenon_id > phenomena.id
Ref: timeseries.category_id > categories.id
Ref: reference_values.timeseries_id > timeseries.id
Ref: observations.timeseries_id > timeseries.id
Ref: error_logs.connector_id > connectors.id
Ref: error_logs.station_id > stations.id
Ref: error_logs.timeseries_id > timeseries.id
